<resources>
    <!--variable details-->
    <string name="app_name">Milan Kalyan</string>
    <string name="txt_welcome">WELCOME TO Milan Kalyan</string>
    <string name="sub_mail">Mail Subject</string>
    <string name="msg_mail">Mail message</string>
    <!--constant details-->
    <string name="sign_in">Log In</string>
    <string name="phone_number">Mobile Number</string>
    <string name="pass">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="no_account">Don\'t have an account? REGISTER</string>
    <string name="signup">Register</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_mobile_number">Enter your mobile number</string>
    <string name="enter_pin">Enter your pin</string>
    <string name="sign_up">Sign up</string>
    <string name="already_registered_signin">Already Registered? LOGIN</string>
    <string name="verifyingg">Verifying…</string>
    <string name="next">Go</string>
    <string name="back_login">Back to LOGIN</string>
    <string name="pin_reset">Reset Pin</string>
    <string name="enter_security_pin">Please Enter Your Security Pin</string>
    <string name="remove">Delete</string>
    <string name="digit_0">0</string>
    <string name="clear">Clr</string>
    <string name="digit_9">9</string>
    <string name="digit_8">8</string>
    <string name="digit_7">7</string>
    <string name="digit_6">6</string>
    <string name="digit_5">5</string>
    <string name="digit_4">4</string>
    <string name="digit_3">3</string>
    <string name="digit_2">2</string>
    <string name="digit_1">1</string>
    <string name="conform_pass">Confirm Password</string>
    <string name="dashboard">Home</string>
    <string name="go_back">GO BACK</string>
    <string name="full_profile">See Full Profile</string>
    <string name="win_his">Win History</string>
    <string name="bid_his">Bid History</string>
    <string name="rates">Game Rates</string>
    <string name="how_play">How to Play</string>
    <string name="contact_uss">Contact Us</string>
    <string name="share_friends">Share With Friends</string>
    <string name="app_rates">Rate App</string>
    <string name="change_pass">Change Password</string>
    <string name="signout">Logout</string>
    <string name="vault">Wallet</string>
    <string name="wallet_points">Balance Available</string>
    <string name="withdraw_method">Bank Method</string>
    <string name="coins">Amount</string>
    <string name="push">Submit Request</string>
    <string name="coins_withdraw">Withdraw Funds</string>
    <string name="withdraw_time">Withdrawal available from 07:00 to 11:00 AM</string>
    <string name="withdraw_coins">Enter Withdrawal Amount</string>
    <string name="select_withdraw_method">Select Payment Method</string>
    <string name="method_of_payment">Payment Method</string>
    <string name="account_owner_name">Account Holder Name</string>
    <string name="num_of_account">Account Number</string>
    <string name="enter_account_number">Enter Your Account Number</string>
    <string name="conform_account_num">Confirm Account Number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="enter_ifsc_code">Enter IFSC code</string>
    <string name="branch_address">Branch Address</string>
    <string name="enter_branch_address">Enter Branch Address</string>
    <string name="bank_name">Bank Name</string>
    <string name="enter_bank_name">Enter Bank Name</string>
    <string name="name">Name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="single_digit">Single Digit</string>
    <string name="jodi_digit">Jodi Digit</string>
    <string name="single_pana">Single Panna</string>
    <string name="double_digit">Double Panna</string>
    <string name="triple_digit">Triple Panna</string>
    <string name="half_sangam">Half Sangam</string>
    <string name="full_sangam">Full Sangam</string>
    <string name="watch_it_on_youtube">Watch it on youtube</string>
    <string name="chart">Chart</string>
    <string name="star_line_game">Star Line Game</string>
    <string name="double_pana">Double Panna</string>
    <string name="triple_pana">Triple Panna</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_session">Choose Session</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="digits">Digits</string>
    <string name="enter_digits">Enter Digits</string>
    <string name="points">Amount</string>
    <string name="enter_points">Enter Amount</string>
    <string name="proceed">Proceed</string>
    <string name="once_a_bid_is_placed_it_will_not_be_cancelled">Once a bid is placed, it can not be cancelled.</string>
    <string name="cancel">Cancel</string>
    <string name="conform">Confirm</string>
    <string name="completed">Completed</string>
    <string name="bid_successfully_submitted">Bid Successfully Submitted</string>
    <string name="play_again">Play Again</string>
    <string name="open_digit">Open Digit</string>
    <string name="close_pana">Close Panna</string>
    <string name="open_pana">Open Panna</string>
    <string name="close_digit">Close Digit</string>
    <string name="add_funds">Add Funds</string>
    <string name="profile">Profile</string>
    <string name="bank_account">Bank Account</string>
    <string name="manage_bank_details">Manage Bank Details</string>
    <string name="manage_paytm">Manage PayTM</string>
    <string name="manage_google_pay">Manage Google Pay</string>
    <string name="manage_phonepe">Manage PhonePe</string>
    <string name="more">More</string>
    <string name="wallet_statement">Wallet Statement</string>
    <string name="transfer_points">Transfer Funds</string>
    <string name="please_enter_your_bank_account_holder_name">Please Enter Your Bank Account Holder Name</string>
    <string name="please_enter_your_bank_account_number">Please Enter Your Bank Account Number</string>
    <string name="enter_valid_bank_account_number">Please Enter Valid Bank Account Number</string>
    <string name="please_enter_your_conform_bank_account_number">Please Enter Your Conform Bank Account Number</string>
    <string name="account_number_not_matching">Account Number Not Matching</string>
    <string name="please_enter_your_bank_ifsc_code">Please Enter Your Bank IFSC Code</string>
    <string name="please_enter_valid_ifsc_code_of_your_bank">Please Enter Valid IFSC Code of Your Bank</string>
    <string name="please_enter_your_bank_name">Please Enter Your Bank Name</string>
    <string name="please_enter_your_branch_address">Please Enter Your Branch Address</string>
    <string name="upi">UPI</string>
    <string name="changePassword">changePassword</string>
    <string name="please_enter_your_new_password">Please enter your new Password</string>
    <string name="new_password_must_be_of_at_least_4_characters_length">New password must be of at least 4 characters length</string>
    <string name="please_enter_conform_password">Please enter conform password</string>
    <string name="password_not_matchin">Password not matching</string>
    <string name="please_enter_mobile_number">Please Enter Mobile Number</string>
    <string name="please_enter_valid_mobile_number">Please Enter Valid Mobile Number</string>
    <string name="verification">verification</string>
    <string name="game">Game</string>
    <string name="game_name">game_name</string>
    <string name="please_enter_digits">Please enter digits</string>
    <string name="please_enter_valid_digits">Please Enter Valid digits</string>
    <string name="please_enter_points">Please Enter Amount</string>
    <string name="please_enter_valid_open_digits">Please Enter Valid Open Digits</string>
    <string name="please_enter_close_pana">Please Enter Close Panna</string>
    <string name="please_enter_valid_close_pana">Please Enter Valid Close Panna</string>
    <string name="please_enter_valid_open_pana">Please Enter Valid Open Panna</string>
    <string name="please_enter_close_digits">Please Enter Close Digits</string>
    <string name="please_enter_valid_close_digits">Please Enter Valid Close Digits</string>
    <string name="bottom_sheet">bottomSheet</string>
    <string name="main_activity">MainActivity</string>
    <string name="youtube_video_not_added_yet">youtube video not added yet</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_enter_min_4_digits_password">please Enter Min 4 Digits Password</string>
    <string name="history">History</string>
    <string name="exit_application">Exit Application</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="please_enter_your_email">Please Enter Your email</string>
    <string name="please_enter_valid_email">Please Enter Valid Email</string>
    <string name="please_enter_pin">Please Enter Pin</string>
    <string name="please_enter_min_4_digit_pin">Please Enter Min 4 Digit Pin</string>
    <string name="enter_valid_number">Enter Valid Number</string>
    <string name="minimum_points_must_be_greater_then_">Minimum Amount must be greater then </string>
    <string name="maximum_points_must_be_less_then_">Maximum Amount must be less then </string>
    <string name="please_select_payment_method">Please Select Payment Method</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="telegram_channel_link">Mobile No. 2</string>
    <string name="telegram">Telegram</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="response_error">Try Again</string>
    <string name="on_api_failure">An error has occurred</string>
    <string name="success">success</string>
    <string name="bids_api_open">{ \"bids\":</string>
    <string name="bids_api_close">}</string>
    <string name="user_mobile_number">User Mobile Number</string>
    <string name="if_you_enable_to_pay_please_pay_directly_on_above_upi_id_nor_ncontact_to_admin">If you are unable to pay, please pay directly on above UPI ID\nor\nContact the admin on WhatsApp</string>
    <string name="upi_id">upi id</string>
    <string name="verify">Verify</string>
    <string name="forgot">forgot</string>
    <string name="you_are_not_connected_to_internet">You are not connected to internet. Please check your internet connection</string>
    <string name="check_your_internet_connection">Please check your internet connection</string>
    <string name="google_pay">Google Pay</string>
    <string name="pay">Add Cash</string>
    <string name="phonepe">PhonePe</string>
    <string name="paytm">PayTM</string>
    <string name="razorpay">Razorpay</string>
    <string name="other_pay">PhonePe, Google Pay, Paytm, UPI</string>
    <string name="left_digit">Left Digit</string>
    <string name="right_digit">Right Digit</string>
    <string name="gali_disawar_game">Gali Disawar Game</string>
    <string name="gali_disawar">Gali Disawar</string>
    <string name="razor_pay_key">rzp_live_keyhere</string>
</resources>