<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/profile"
        android:visible="false">
        <menu>
            <group>
                <item
                    android:title="@string/dashboard"
                    android:id="@+id/home"
                    android:orderInCategory="0"
                    android:icon="@drawable/home"
                    />
                <item android:title="@string/full_profile"
                    android:id="@+id/seeFullProfile"
                    android:icon="@drawable/nprofile"
                    android:orderInCategory="2"/>

                <item android:title="@string/win_his"
                    android:id="@+id/winHistory"
                    android:icon="@drawable/nwin"
                    android:orderInCategory="2"/>
                <item android:title="@string/bid_his"
                    android:id="@+id/bidHistory"
                    android:icon="@drawable/nwithh"
                    android:orderInCategory="1"/>
                <item android:title="Wallet"
                    android:id="@+id/transferPoints"
                    android:visible="true"
                    android:icon="@drawable/nwallet"/>
                <item android:title="@string/add_funds"
                    android:id="@+id/addFunds"
                    android:visible="false"
                    android:icon="@drawable/add_funds1"/>
                <item android:title="@string/coins_withdraw"
                    android:id="@+id/withdrawPoints"
                    android:visible="false"
                    android:icon="@drawable/withdraw1"
                    android:iconTint="@color/textViewColor1"/>
                <item android:title="@string/wallet_statement"
                    android:id="@+id/walletStatement"
                    android:visible="false"
                    android:icon="@drawable/wallet1"/>
                <item android:title="@string/transfer_points"
                    android:id="@+id/transferPointss"
                    android:visible="false"
                    android:icon="@drawable/transfer_points1"/>
                <item android:title="@string/rates"
                    android:id="@+id/game_values"
                    android:icon="@drawable/grate"
                    android:orderInCategory="4"
                    android:visible="false"/>

                <item android:title="@string/contact_uss"
                    android:id="@+id/contactUs"
                    android:icon="@drawable/ncontact"
                    android:visible="false"
                    android:orderInCategory="6"/>
                <item android:title="@string/change_pass"
                    android:id="@+id/changePassword"
                    android:icon="@drawable/nrate"
                    android:orderInCategory="9"
                    android:visible="false"/>
                <item android:title="@string/share_friends"
                    android:id="@+id/shareWithFriends"
                    android:icon="@drawable/nshare"
                    android:orderInCategory="7"/>
                <item android:title="@string/app_rates"
                    android:id="@+id/rateApp"
                    android:icon="@drawable/nrate"
                    android:orderInCategory="8"/>

                <item android:title="@string/how_play"
                    android:id="@+id/how_to_learn"
                    android:icon="@drawable/play1"
                    android:orderInCategory="5"
                    android:visible="false"/>
                <item android:title="@string/signout"
                    android:id="@+id/logout"
                    android:icon="@drawable/nlout"
                    android:orderInCategory="10"/>
            </group>
        </menu>
    </item>




    <item android:title="@string/bank_account"
        android:id="@+id/bank_ac"
        android:visible="false">
        <menu>
            <group>

            </group>
        </menu>
    </item>
    <item android:title="@string/manage_bank_details"
        android:id="@+id/manageBank"
        android:visible="false"
        android:icon="@drawable/bank1"/>
    <item android:title="@string/manage_paytm"
        android:id="@+id/managePaytm"
        android:visible="false"
        android:icon="@drawable/bank2"/>
    <item android:title="@string/manage_google_pay"
        android:id="@+id/manageGooglePay"
        android:visible="false"

        android:icon="@drawable/bank2"/>
    <item android:title="@string/manage_phonepe"
        android:id="@+id/managePhonePe"
        android:visible="false"
        android:icon="@drawable/bank2"/>


    <item android:title="@string/more">
        <menu>
            <group>

            </group>
        </menu>
    </item>


</menu>