<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
        android:background="@drawable/background"
    tools:context=".sfdghj.BActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbarLayout">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/btnTextColor"
            android:background="@color/transparent"            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="Bank Details"
            app:contentInsetStartWithNavigation="0dp"/>
    </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dataConText"
        android:text="@string/you_are_not_connected_to_internet"
        android:textColor="@color/white"
        android:background="@color/warn_red"
        android:padding="5dp"
        android:visibility="gone"
        android:layout_below="@id/appbarLayout"
        android:elevation="1dp"
        />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_below="@id/dataConText">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="40dp"
            android:paddingVertical="30dp">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textViewColor1"
                android:textSize="18sp"
                android:text="@string/account_owner_name"
                android:textStyle="bold"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textViewColor1"
                android:backgroundTint="@color/golden"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:lines="1"
                android:layout_marginBottom="20dp"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textViewColor1"
                android:textSize="18sp"
                android:text="@string/num_of_account"
                android:textStyle="bold"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/acNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textViewColor1"
                android:backgroundTint="@color/golden"
                android:hint="@string/enter_account_number"
                android:inputType="number"
                android:lines="1"
                android:layout_marginBottom="20dp"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textViewColor1"
                android:textSize="18sp"
                android:text="@string/conform_account_num"
                android:textStyle="bold" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confAcNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textViewColor1"
                android:backgroundTint="@color/golden"
                android:hint="@string/conform_account_num"
                android:inputType="number"
                android:lines="1"
                android:layout_marginBottom="20dp"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textViewColor1"
                android:textSize="18sp"
                android:text="@string/ifsc_code"
                android:textStyle="bold"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ifsc_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textViewColor1"
                android:backgroundTint="@color/golden"
                android:hint="@string/enter_ifsc_code"
                android:inputType="text"
                android:lines="1"
                android:maxLength="11"
                android:layout_marginBottom="20dp"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textViewColor1"
                android:textSize="18sp"
                android:text="@string/bank_name"
                android:textStyle="bold"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bank_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textViewColor1"
                android:backgroundTint="@color/golden"
                android:hint="@string/enter_bank_name"
                android:inputType="text"
                android:lines="1"
                android:layout_marginBottom="20dp"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textViewColor1"
                android:textSize="18sp"
                android:text="@string/branch_address"
                android:textStyle="bold"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bank_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textViewColor1"
                android:backgroundTint="@color/golden"
                android:hint="@string/enter_branch_address"
                android:inputType="text|textMultiLine"
                android:gravity="top"
                android:lines="4"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/btnTextColor"
                android:text="@string/push"
                android:background="@drawable/card_background3"
                android:backgroundTint="#201d3a"
                android:layout_gravity="end"
                android:onClick="submitInfo"/>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>