<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
>
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_complete_green__tick_icon_01"
        android:layout_marginVertical="20dp"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed"
        android:textColor="@color/btnTextColor"
        android:textStyle="bold"
        android:textSize="15sp"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bid_successfully_submitted"
        android:textColor="@color/btnTextColor"
        android:textStyle="bold"
        android:layout_marginVertical="10dp"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_again"
        android:textColor="@color/green"
        android:layout_marginVertical="10dp"
        android:onClick="playAgainBtn"/>
</LinearLayout>