<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:background="@drawable/background"

    android:paddingVertical="30dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_bottom_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/once_a_bid_is_placed_it_will_not_be_cancelled"
        android:textColor="@color/matka_red"
        android:textSize="16sp"
        android:layout_marginBottom="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_weight="1"
            android:backgroundTint="@color/matka_red"
            android:text="@string/cancel"
            android:textColor="@color/btnTextColor"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/conform"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/conform"
            android:layout_marginHorizontal="40dp"
            android:backgroundTint="@color/matka_red"
            android:layout_weight="1"
            android:textColor="@color/btnTextColor"
            app:cornerRadius="0dp"/>
    </LinearLayout>

</LinearLayout>